1、tomcat可以正常启动，但不能使用shiro，否则会出现报警 2、member、action、role的dao和service已做，测试通过

--- a/pom.xml
+++ b/pom.xml
@@ -407,5 +407,6 @@
     <module>manager-account-service</module>
     <module>manager-account-test</module>
     <module>manager-account-web</module>
+    <module>manager-account-web-a</module>
   </modules>
 </project>
