--- a/manager-account-web-a/src/main/java/cn/mldn/message/Pages.properties
+++ b/manager-account-web-a/src/main/java/cn/mldn/message/Pages.properties
@@ -1,5 +1,5 @@
 # \u5b9a\u4e49Action\u8df3\u8f6c\u5230\u7684JSP\u9875\u9762\u8def\u5f84
-index.page=back/index
+index.page=index
 back.forward.page=/plugins/back/back_forward
 dept.list.page=/back/admin/dept/dept_list
 emp.add.page=/back/admin/emp/emp_add
