1、更新了父pom，增加了两个上传组件 2、实现了无分页雇员列表查询显示 3、需要完善emp列表功能

--- a/manager-account-web-a/pom.xml
+++ b/manager-account-web-a/pom.xml
@@ -37,6 +37,15 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-redis</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+		</dependency>
+
 		<!-- 以下为Shiro组件开发包 -->
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
