--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,9 @@
 		<!-- Redis相关组件包版本 -->
 		<jedis.version>2.9.0</jedis.version>
 		<sprintdata.version>1.8.3.RELEASE</sprintdata.version>
-
+		<!-- 上传相关组件 -->
+		<commons-collections.version>3.2.2</commons-collections.version>
+		<commons-fileupload.version>1.3.2</commons-fileupload.version>
 
 		<spring.version>4.3.8.RELEASE</spring.version>
 		<aspectj-version>1.7.0</aspectj-version>
@@ -55,6 +57,16 @@
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
 
+			<dependency>
+				<groupId>commons-collections</groupId>
+				<artifactId>commons-collections</artifactId>
+				<version>${commons-collections.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-fileupload</groupId>
+				<artifactId>commons-fileupload</artifactId>
+				<version>${commons-fileupload.version}</version>
+			</dependency>
 
 			<dependency>
 				<groupId>redis.clients</groupId>
@@ -119,7 +131,7 @@
 				<artifactId>jstl</artifactId>
 				<version>${jstl.version}</version>
 			</dependency>
-			
+
 			<!--Druid连接池 -->
 			<dependency>
 				<groupId>com.alibaba</groupId>
