--- a/manager-account-web-a/pom.xml
+++ b/manager-account-web-a/pom.xml
@@ -18,6 +18,15 @@
 			<artifactId>manager-account-api</artifactId>
 		</dependency>
 		
+		<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>commons-fileupload</groupId>
+				<artifactId>commons-fileupload</artifactId>
+			</dependency>
+		
 		<!-- AnnotationMethodHandlerAdapter 依赖 -->
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
