--- a/manager-account-web-a/src/main/java/cn/mldn/message/Pages.properties
+++ b/manager-account-web-a/src/main/java/cn/mldn/message/Pages.properties
@@ -1,41 +1,48 @@
-# \u5b9a\u4e49Action\u8df3\u8f6c\u5230\u7684JSP\u9875\u9762\u8def\u5f84
-index.page=index
-back.forward.page=/plugins/back/back_forward
-dept.list.page=/back/admin/dept/dept_list
-emp.add.page=/back/admin/emp/emp_add
-emp.edit.page=/back/admin/emp/emp_edit
-emp.list.page=/back/admin/emp/emp_list
-emp.model.page=/plugins/back/info/emp_info_modal
+#\u5b9a\u4e49Action\u8df3\u8f6c\u5230\u7684JSP\u9875\u9762\u8def\u5f84
+#index.page=index
+#back.forward.page=/plugins/back/back_forward
+#dept.list.page=/back/admin/dept/dept_list
+#emp.add.page=/back/admin/emp/emp_add
+#emp.edit.page=/back/admin/emp/emp_edit
+#emp.list.page=/back/admin/emp/emp_list
+#emp.model.page=/plugins/back/info/emp_info_modal
+#
+#travel.add.page=/back/admin/travel/travel_add
+#travel.edit.page=/back/admin/travel/travel_edit
+#travel.self.page=/back/admin/travel/travel_list_self
+#travel.emp.page=/back/admin/travel/travel_list_emp
+#travel.user.page=/back/admin/travel/travel_user_edit
+#travel.cost.page=/back/admin/travel/travel_cost_edit
+#
+#travelaudit.list.page=/back/admin/travelaudit/travel_list
+#travelaudit.prepare.page=/back/admin/travelaudit/travel_list_prepare
+#travelaudit.handle.page=/back/admin/travelaudit/travel_audit
+#
+#\u5b9a\u4e49\u8981\u4f7f\u7528\u7684Action\u8def\u5f84
+#emp.list.action=/pages/back/admin/emp/list.action
+#emp.add.action=/pages/back/admin/emp/add_pre.action
+#travel.add.action=/pages/back/admin/travel/add_pre.action
+#travel.self.action=/pages/back/admin/travel/list_self.action
+#travel.emp.action=/pages/back/admin/travel/list_emp.action
+#travelaudit.prepare.action=/pages/back/admin/travelaudit/prepare.action
+#
+#\u9519\u8bef\u9875
+#GoodsAction.add.error.page=/pages/back/admin/goods/add_pre.action
+#
+#EmpActionBack.add.error.page=/pages/back/admin/emp/add_pre.action
+#EmpActionBack.edit.error.page=/pages/back/admin/emp/list.action
+#EmpActionBack.delete.error.page=/pages/back/admin/emp/list.action
+#
+#TravelActionBack.add.error.page=/pages/back/admin/travel/add_pre.action
+#TravelActionBack.edit.error.page=/pages/back/admin/travel/list_self.action
+#TravelActionBack.delete.error.page=/pages/back/admin/travel/list_self.action
+#
+#TravelAuditActionBack.handle.error.page=/pages/back/admin/travelaudit/prepare.action
 
-travel.add.page=/back/admin/travel/travel_add
-travel.edit.page=/back/admin/travel/travel_edit
-travel.self.page=/back/admin/travel/travel_list_self
-travel.emp.page=/back/admin/travel/travel_list_emp
-travel.user.page=/back/admin/travel/travel_user_edit
-travel.cost.page=/back/admin/travel/travel_cost_edit
+forward.page=/files/front/forward.jsp
 
-travelaudit.list.page=/back/admin/travelaudit/travel_list
-travelaudit.prepare.page=/back/admin/travelaudit/travel_list_prepare
-travelaudit.handle.page=/back/admin/travelaudit/travel_audit
-
-# \u5b9a\u4e49\u8981\u4f7f\u7528\u7684Action\u8def\u5f84
-emp.list.action=/pages/back/admin/emp/list.action
-emp.add.action=/pages/back/admin/emp/add_pre.action
-travel.add.action=/pages/back/admin/travel/add_pre.action
-travel.self.action=/pages/back/admin/travel/list_self.action
-travel.emp.action=/pages/back/admin/travel/list_emp.action
-travelaudit.prepare.action=/pages/back/admin/travelaudit/prepare.action
-
-# \u9519\u8bef\u9875
-# GoodsAction.add.error.page=/pages/back/admin/goods/add_pre.action
-
-EmpActionBack.add.error.page=/pages/back/admin/emp/add_pre.action
-EmpActionBack.edit.error.page=/pages/back/admin/emp/list.action
-EmpActionBack.delete.error.page=/pages/back/admin/emp/list.action
-
-TravelActionBack.add.error.page=/pages/back/admin/travel/add_pre.action
-TravelActionBack.edit.error.page=/pages/back/admin/travel/list_self.action
-TravelActionBack.delete.error.page=/pages/back/admin/travel/list_self.action
-
-TravelAuditActionBack.handle.error.page=/pages/back/admin/travelaudit/prepare.action
+plan.list.page=/files/sort_plan_list.jsp
+plan.list.action=/files/planlist.action
+plan.list.success={0}\u589e\u52a0\u6210\u529f
+plan.list.failure={0}\u589e\u52a0\u5931\u8d25
 
