--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 		<druid.version>1.0.0</druid.version>
 
 		<dubbo-version>2.4.10</dubbo-version>
+		
+		<commons-io-version>1.3.2</commons-io-version>
+		<commons-fileupload-version>1.2.1</commons-fileupload-version>
 
 		<zookeeper-version>3.4.10</zookeeper-version>
 		<zkclient.version>0.4</zkclient.version>
@@ -52,6 +55,17 @@
 				<groupId>cn.mldn</groupId>
 				<artifactId>manager-account-api</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>${commons-io-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-fileupload</groupId>
+				<artifactId>commons-fileupload</artifactId>
+				<version>${commons-fileupload-version}</version>
 			</dependency>
 			
 			
