表修改之后的雇员分页

--- a/manager-account-web-a/src/main/java/cn/mldn/message/Pages.properties
+++ b/manager-account-web-a/src/main/java/cn/mldn/message/Pages.properties
@@ -1,8 +1,13 @@
 # \u5b9a\u4e49Action\u8df3\u8f6c\u5230\u7684JSP\u9875\u9762\u8def\u5f84
 index.page=index
 
+forward.action=/forward.action
+forward.page=plugins/forward
+
 emp.list.page=/emp_list
 emp.list.action=/files/emp_list.action
+emp.add.page=/emp_add
+emp.add.action=/files/emp_add.action
 
 
 
