--- a/manager-account-web-a/src/main/java/cn/mldn/message/Pages.properties
+++ b/manager-account-web-a/src/main/java/cn/mldn/message/Pages.properties
@@ -5,6 +5,7 @@ emp.list.page=/emp_list
 
 #\u5c0f\u7ec4\u5217\u8868\u9875\u9762
 team.list.page=/team_list
+team.list.action=/files/team_list.action
 
 
 
