--- a/manager-account-web-a/src/main/java/cn/mldn/message/Pages.properties
+++ b/manager-account-web-a/src/main/java/cn/mldn/message/Pages.properties
@@ -7,7 +7,7 @@ forward.page=plugins/forward
 emp.list.page=/emp_list
 emp.list.action=/files/emp_list.action
 emp.add.page=/emp_add
-emp.add.action=/files/emp_add.action
+emp.add.action=/files/emp_addpre.action
 
 
 
