更新sort_plan_add.jsp字段，Action已经可以接收单一vo类，需要解决多vo类接收问题

--- a/manager-account-web-a/src/main/java/cn/mldn/message/Pages.properties
+++ b/manager-account-web-a/src/main/java/cn/mldn/message/Pages.properties
@@ -41,6 +41,8 @@
 
 forward.page=/files/front/forward.jsp
 
+plan.add.page=/files/sort_plan_add.jsp
+plan.add.action=/files/planadd.action
 plan.list.page=/files/sort_plan_list.jsp
 plan.list.action=/files/planlist.action
 plan.list.success={0}\u589e\u52a0\u6210\u529f
