1、增加了FastDFSUtil.java上传工具类，可以进行上传与删除功能，需要有fastdfs_client.conf配置文件 2、FastDFS图片服务器tracker IP:192.168.28.161 , storage IP:192.168.28.162

--- a/manager-account-web-a/pom.xml
+++ b/manager-account-web-a/pom.xml
@@ -17,7 +17,12 @@
 			<groupId>cn.mldn</groupId>
 			<artifactId>manager-account-api</artifactId>
 		</dependency>
-
+		<!-- fastDFS相关组件包 s -->
+		<dependency>
+			<groupId>com.github.kischang</groupId>
+			<artifactId>fastdfs-client</artifactId>
+		</dependency>
+		<!-- fastDFS相关组件包 e -->
 		<!-- AnnotationMethodHandlerAdapter 依赖 -->
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
