--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,10 @@
 		<!-- 上传相关组件 -->
 		<commons-collections.version>3.2.2</commons-collections.version>
 		<commons-fileupload.version>1.3.2</commons-fileupload.version>
-
 		<spring.version>4.3.8.RELEASE</spring.version>
 		<aspectj-version>1.7.0</aspectj-version>
+		<!-- fastDFS相关组件包 -->
+		<fastdfs-client.version>0.1</fastdfs-client.version>
 	</properties>
 
 	<dependencyManagement>
@@ -56,7 +57,13 @@
 				<artifactId>manager-account-api</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
-
+			<!-- fastDFS相关组件包 s-->
+			<dependency>
+				<groupId>com.github.kischang</groupId>
+				<artifactId>fastdfs-client</artifactId>
+				<version>${fastdfs-client.version}</version>
+			</dependency>
+			<!-- fastDFS相关组件包 e-->
 			<dependency>
 				<groupId>commons-collections</groupId>
 				<artifactId>commons-collections</artifactId>
