--- a/manager-account-web-a/pom.xml
+++ b/manager-account-web-a/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>cn.mldn</groupId>
 		<artifactId>manager</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1</version>
 	</parent>
 	<artifactId>manager-account-web-a</artifactId>
 	<packaging>war</packaging>
